--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -864,10 +864,8 @@
                 ZIndex: =5
 
             nabavniNalogReadyForNavCheckbox As Checkbox:
-                AlignInContainer: =AlignInContainer.Start
-                Checked: =false
                 DisplayMode: =DisplayMode.Edit
-                FontUnderline: =false
+                FontSize: =16
                 FontWeight: =FontWeight.Bold
                 Height: =Parent.Height
                 Label: ="Ready for NAV"
