--- a/BSiNS/Src/App.fx.yaml
+++ b/BSiNS/Src/App.fx.yaml
@@ -7,7 +7,7 @@ App As appinfo:
             Contacts,
             Email = User().Email
         );
-        warehouseCode = "SGP-TEST";
+        warehouseCode = "AM-01";
     OnStart: =
     StartScreen: =
     Theme: =PowerAppsTheme
