Implementacija get all logike

--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -99,7 +99,7 @@
       "zeroalltabindexes": true
     },
     "Author": "",
-    "BindingErrorCount": 0,
+    "BindingErrorCount": 16,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "DesktopOrTablet",
@@ -133,11 +133,11 @@
   },
   "ScreenOrder": [
     "scrEntry",
-    "xmlNabavniNalog",
-    "xmlNalogZaPrenos",
-    "xmlNalogZaProdaju",
-    "xmlPrimke",
-    "xmlTemeljniceInventure",
-    "scr_XMLOtpremnice"
+    "scr_XMLNabavniNalog",
+    "scr_XMLNalogZaPrenos",
+    "scr_XMLNalogZaProdaju",
+    "scr_XMLOtpremnice",
+    "scr_XMLPrimke",
+    "scr_XMLTemeljniceInventure"
   ]
 }
