--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -866,6 +866,7 @@
             nabavniNalogReadyForNavCheckbox As Checkbox:
                 BasePaletteColor: =RGBA(249, 83, 109, 1)
                 DisplayMode: =DisplayMode.Edit
+                FontColor: =
                 FontSize: =14
                 FontWeight: =FontWeight.Bold
                 Height: =Parent.Height
