--- a/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
@@ -1534,9 +1534,10 @@
                 Height: =50
                 HoverColor: =RGBA(255, 255, 255, 1)
                 HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
-                OnSelect: |-
+                OnSelect: |
                     =Clear(colTransferLines);
                     Collect(colTransferLines, colOriginalTransferLines);
+                    Reset(nalogZaPrenosReadyForNavCheckbox);
                 Size: =15
                 Text: ="Reset"
                 ZIndex: =5
@@ -1792,7 +1793,9 @@
                 )
             });
             
-            If(!isCreated,UpdateXML.Run(transferJsonData, file_Name, "ReadyForProcessing"));
+            If(!isCreated,UpdateXML.Run(transferJsonData, SelectedFile, SelectedFolder, nalogZaPrenosReadyForNavCheckbox.Checked));
+            
+            Navigate(scrEntry,ScreenTransition.Fade);
         Size: =15
         Text: ="Save"
         Width: =225
